# floodsr

./: .dockerignore  .gitignore  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  PLAN.md  README.md  examples.ipynb  parameters.py  pyproject.toml  pytest.ini  releasing.md
.devcontainer/: readme.md
.devcontainer/docs/: devcontainer.json  docker-compose.yml
.devcontainer/main/: devcontainer.json  docker-compose.yml
.github/workflows/: README.md  full-tests.yml  pipx-smoke.yml
container/: Dockerfile  pip-freeze.base.txt  pip-freeze.dev.txt  readme.md  requirements.overlay.dev.txt  requirements.overlay.txt
container/bookworm/: Dockerfile  pip-freeze.base.txt  pip-freeze.dev.txt  qgis_freeze.txt  readme.md  requirements.overlay.dev.txt  requirements.overlay.txt
container/docs/: Dockerfile  pip-freeze-docs-dev.txt  readme.md  requirements.overlay.dev.txt  requirements.overlay.txt
dev/: 01_poc_infer_test_tiles.ipynb  infer_test_tiles.ipynb
docs/: README.md  index.rst  update_ui_screenshots.py
docs/_static/: custom.css
floodsr/: __init__.py  cache_paths.py  checksums.py  cli.py  inference.py  model_registry.py  models.json  preprocess.py  preprocessing.py  tiling.py  tohr.py
misc/: __init__.py  eval.py
others/: CostGrow_inline.ipynb  CostGrow_pcraster_inline.ipynb  readme.md
proof_of_concepts/: hrdem_fetch.ipynb  infer_test_tiles.ipynb
tests/: conftest.py  test_cache_paths.py  test_checksums.py  test_cli_infer.py  test_cli_models.py  test_cli_tohr.py  test_docs.py  test_engine_base.py  test_engine_contracts.py  test_engine_init.py  test_engine_ort.py  test_engine_providers.py  test_infer.py  test_inference.py  test_inference_regression.py  test_model_registry.py  test_preprocessing.py  test_tohr_regression.py
(+81 files in other folders)
