[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "floodsr"
version = "0.0.1"
description = "Flood super-resolution CLI and library using ONNX Runtime."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "floodsr developers" }]
dependencies = [
    "numpy>=1.24",
    "onnxruntime>=1.18",
    "platformdirs>=4.0",
    "pydantic>=2.5",
    "rasterio>=1.3",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[project.scripts]
floodsr = "floodsr.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["floodsr*"]

[tool.setuptools.package-data]
floodsr = ["models.json"]
